<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piot_converter</name>
  <version>1.0.0</version>
  <description>
    Converter node for PIOT robot.
  </description>
  <maintainer email="rkd1037@piot.co.kr">piot</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>piot_can_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
