<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piot_robot_localization</name>
  <version>1.0.0</version>
  <description>
    ROS 2 launch scripts for robot localization
  </description> 
  <maintainer email="rkd1037@piot.co.kr">piot</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
